Add API methods
